# moz-l10n

./: .gitignore  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  js.yaml  publish.yaml  python.yaml  sbom.yaml  security.yaml
js/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
js/src/: android-parse.ts  android-serialize.ts  android.test.ts  errors.ts  fluent-parse.ts  fluent-serialize.ts  fluent.test.ts  index.test.ts  index.ts  mf2-parse.ts  mf2-serialize.ts  mf2.test.ts  model-utils.test.ts  model-utils.ts  model.ts  properties-parse.ts  properties-serialize.ts  properties.test.ts  webext-parse.ts  webext-serialize.ts  webext.test.ts  webext.ts  xliff-parse.ts  xliff-serialize.ts  xliff.test.ts  xml-utils.ts
moz/l10n/: __init__.py  detect_format.py  message.py  model.py  parse_resource.py  resource.py
moz/l10n/android/: parse.py  serialize.py
moz/l10n/dtd/: parse.py  serialize.py
moz/l10n/fluent/: parse.py  serialize.py
moz/l10n/formats/: __init__.py
moz/l10n/formats/android/: parse.py  serialize.py
moz/l10n/formats/dtd/: parse.py  serialize.py
moz/l10n/formats/fluent/: parse.py  serialize.py
moz/l10n/formats/inc/: parse.py  serialize.py
moz/l10n/formats/ini/: parse.py  serialize.py
moz/l10n/formats/mf2/: __init__.py  from_json.py  message_parser.py  serialize.py  to_json.py  validate.py
moz/l10n/formats/plain_json/: parse.py  serialize.py
moz/l10n/formats/po/: parse.py  serialize.py
moz/l10n/formats/properties/: parse.py  serialize.py
moz/l10n/formats/webext/: parse.py  serialize.py
moz/l10n/formats/xliff/: common.py  parse.py  parse_trans_unit.py  (+2 more)
moz/l10n/inc/: parse.py  serialize.py
moz/l10n/ini/: parse.py  serialize.py
moz/l10n/message/: data.py  from_json.py  to_json.py
moz/l10n/paths/: config.py  discover.py
moz/l10n/plain/: __init__.py  parse.py  serialize.py
moz/l10n/po/: parse.py  serialize.py
moz/l10n/properties/: parse.py  serialize.py
moz/l10n/resource/: __init__.py  add_entries.py  data.py  format.py  iter_resources.py  l10n_equal.py  parse_resource.py  serialize_resource.py
moz/l10n/transform/: __init__.py  add_entries.py
moz/l10n/webext/: parse.py  serialize.py
moz/l10n/xliff/: common.py  parse.py  parse_trans_unit.py  parse_xcode.py  serialize.py
python/: README.md  pyproject.toml
python/moz/l10n/: __init__.py  migrate.py  model.py
python/tests/: test_add_entries.py  test_android_locale.py  test_bin_build.py  test_bin_compare.py  test_cli_compare.py  test_config.py  test_discover.py  test_entry_json.py  test_l10n_equal.py  test_lint.py  test_message.py  test_message_parse.py  test_migrate.py  test_model.py  test_resource.py  test_resource_json.py  test_walk_files.py  utils.py
python/tests/fixtures/: migrate_pluralform_properties_to_fluent.py
python/tests/formats/: __init__.py  test_android.py  test_detect_format.py  test_dtd.py  test_fluent.py  test_gettext.py  test_inc.py  test_mf2.py  test_mf2_validate.py  test_parse_serialize_resource.py  test_plain_json.py  test_po.py  test_properties.py  test_webext.py  test_xliff1.py
schemas/: entry.json  message.json  resource.json
tests/: test_add_entries.py  test_android.py  test_config.py  test_detect_format.py  test_discover.py  test_dtd.py  test_fluent.py  test_inc.py  test_ini.py  test_iter_resources.py  test_l10n_equal.py  test_parse_resource.py  test_parse_serialize_resource.py  test_plain.py  test_plain_json.py  test_po.py  test_properties.py  test_walk_files.py  test_webext.py  test_xliff1.py
tests/data/: accounts.dtd  demo.ftl  foo.po  strings.xml  test.properties  xcode.xliff
tests/formats/: __init__.py  test_android.py  test_detect_format.py  test_dtd.py  test_fluent.py  test_inc.py  test_ini.py  test_mf2.py  test_mf2_validate.py  test_parse_serialize_resource.py  test_plain_json.py  test_po.py  test_properties.py  test_webext.py  test_xliff1.py
tests/formats/data/: angular.xliff  xcode.xliff
tests/resource/: test_android.py  test_detect_format.py  test_dtd.py  test_fluent.py  test_inc.py  test_ini.py  test_iter_resources.py  test_parse_serialize_resource.py  test_plain_json.py  test_po.py  test_properties.py  test_webext.py  test_xliff1.py
tests/resource/data/: demo.ftl  foo.po  icu-docs.xliff  messages.json
(+110 files in other folders)
