[project]
name = "monorepo"
version = "0.0.0"
description = "Mozilla tools for localization"

[dependency-groups]
dev = [
  "jsonschema>=4.23.0",
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-cov>=7.1.0",
  "pytest-subtests; python_version < '3.10'",
  "ruff>=0.16.0",
  "types-lxml>=2024.9.16",
  "types-polib>=1.2.0.20240811",
]

[tool.uv.workspace]
members = ["python"]

[tool.mypy]
exclude = "/(build|tests)/"
explicit_package_bases = true
mypy_path = "python"
strict = true

[[tool.mypy.overrides]]
module = "translate.storage.properties"
ignore_missing_imports = true

[tool.ruff.lint]
allowed-confusables = [" "]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "PLC", # pylint conventions
  "PLE", # pyline errors
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # Line too long
  "PLC0415", # `import` should be at the top-level of a file
]
[tool.ty.environment]
python = ".venv"

[tool.coverage.run]
omit = ["tests/*", "**/tests/*"]
[tool.coverage.report]
skip_empty = true
